jdk25 support
Signed-off-by: Prudhvi Godithi <pgodithi@amazon.com>